<resources>
    <string name="app_name" translatable="false">Pomodoro</string>
    <string name="timer" translatable="false">%s</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="reset_btn">Reset</string>
    <string name="resume_btn">Resume</string>
    <string name="pause_btn">Pause</string>
    <string name="skip_btn">Skip</string>
    <string name="work">Work</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>

    <!--    Menu -->
    <string name="about">About</string>
    <string name="setting">Setting</string>

    <!-- Preference Titles -->
    <string name="messages_header">Time Setting</string>
    <string name="general_settings">General Settings</string>

    <!-- Messages Preferences -->
    <string name="work_time">Set Work time</string>
    <string name="short_time">Set short time</string>
    <string name="long_time">Set long time</string>
    <string name="dark_mode">Dark Mode</string>

    <!--    About Page-->
    <string name="about_text">Pomodoro timer has minimalist design. It best for your productivity and focus. Its very simple Pomodoro timer it has own loop.</string>
    <string name="version">Version</string>
    <string name="description">Description</string>
    <string name="developer_information">Developer Information</string>
    <string name="name">Name</string>
    <string name="dev_name" translatable="false">Kagan Kuscu</string>
    <string name="email" translatable="false">Email</string>
    <string name="dev_email" translatable="false">kagan.kuscu@outlook.com</string>
    <string name="contribute">If you are interested you can find at Github.</string>
    <string name="btn_view_on_github">View on the Github</string>
    <string name="contributeTitle">Contribute</string>

    <!--    Setting Page -->
    <string name="app_icon" translatable="false">app icon</string>
    <string name="keep_screen_on" translatable="false">Keep Screen On</string>
    <string name="key_mode" translatable="false">mode</string>
    <string name="key_keep_screen_on" translatable="false">keep_screen_on</string>
    <string name="key_work_time" translatable="false">work_time</string>
    <string name="key_short_break" translatable="false">short_break</string>
    <string name="key_long_break" translatable="false">long_break</string>

<!--    Notification -->
    <string name="timer_notification">Timer Notification</string>

</resources>