<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general_settings">
        <SwitchPreference
            android:defaultValue="false"
            app:key="mode"
            app:title="@string/dark_mode" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            android:inputType="number"
            app:key="work_time"
            app:title="@string/work_time"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:key="short_break"
            app:title="@string/short_time"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:key="long_break"
            app:title="@string/long_time"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>