<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hwads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timerViewModel"
            type="com.example.pomodoroapp.timer.TimerViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/timerText"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/timer"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/infoText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/infoText"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:text="@string/work"
            android:textColor="@android:color/darker_gray"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.742" />

        <Button
            android:id="@+id/btnStart"
            style="@style/Button.Timer"
            android:background="@drawable/button_selector"
            android:onClick="@{() -> timerViewModel.toggleStartAndStop()}"
            android:text="@string/start_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnSkip"
            app:layout_constraintEnd_toStartOf="@+id/btnSkip"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSkip"
            style="@style/Button.Timer"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_selector"
            android:onClick="@{() -> timerViewModel.onSkipTimer()}"
            android:text="@string/skip_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnStart"
            app:layout_constraintTop_toBottomOf="@+id/timerText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnReset"
            style="@style/Button.Timer"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:onClick="@{() -> timerViewModel.onResetTimer()}"
            android:text="@string/reset_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnSkip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSkip" />

        <com.huawei.hms.ads.banner.BannerView
            android:id="@+id/hw_banner_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hwads:adId="testw6vs28auh3"
            hwads:bannerSize="BANNER_SIZE_360_57"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>